--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,8 @@
 $lightGreen: #b9e7e7;
 
 .app {
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
   .container {
     width: 1024px;
 
